syntax = "proto3";

package pb;

import "refresh_token/refresh_token.proto";

option go_package = "github.com/Streamfair/streamfair_token_svc/pb/refresh_token";

message VerifyRefreshTokenRequest {
    string refresh_token = 1;
}

message VerifyRefreshTokenResponse {
    RefreshToken refresh_token = 1;
}
